--- a/salim.html
+++ b/salim.html
@@ -1,12 +1,12 @@
 <p style="color:blue; font-size: 50px;font family:tahoma,callibri,nerw roman;"> HELLO WORLD.</p>
-<p>SALIM</p>
+<p>waleerth</p>
 <html>
 <head>
 <title>test</title>
 <link rel="stylesheet" href="style.css">
 <style>h4{color:green}p{color:orange;}.green-fruit{color:green;}
 #yellow-fruit{color:yellow;}
-#red-fruit{color:red;}
+#red-fruit{color:brown;}
 #black-fruit{color:black;}
 </style>
 </head>
@@ -28,10 +28,11 @@
 </ul>
 <ol>
 <h4><u><b>Human Varieties</h4></u></b>
-<li class="yellow-human">fulanik</li>
+<li class="yellow-human">ebira</li>
 <li class="yellow-human">arabic</li>
 <li id="white-human">american</li>
-<li id="black-human">katsina</li>
+<li id="black-human">benina</li>
 <bg color="green">
 </body>
+
 </html>
